Fix image flickering
Caused by https://bugzilla.mozilla.org/show_bug.cgi?id=962594
Credits go to Mardeg in Mozilla IRC#firefox for finding the problem

--- a/site/icons.css
+++ b/site/icons.css
@@ -48,4 +48,9 @@ label[for='including-bogus']::before {
   -moz-animation: spin 2s infinite linear;
   -o-animation: spin 2s infinite linear;
   animation: spin 2s infinite linear;
+  animation-play-state: running;
 }
+#dynamic > :first-child::before {
+  animation-play-state: paused;
+}
+
